@@ -1,5 +1,6 @@
-XXXX-XX-XX      XXXXXX  Added the raw_number() method, thanks to Michael Schout
-                          for the suggestion;
+XXXX-XX-XX      XXXXXX  Added the format_using() method and the ability to
+                          use third-party formatters, thanks to Michael
+                          Schout for the suggestion;
                         Data updates
 
 2015-12-08      3.0014  Deprecated APIs of being able to call most methods as
